chore: attempt to disable builds on new tags
I think this is equivalent to appveyor's skip_tags: true

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,13 @@
 # GITHUB_TOKEN
 # NUGET_TOKEN
 
+trigger:
+  branches:
+    # Disable builds on new tags
+    exclude:
+      - tags/*
+      - refs/tags/*
+
 jobs:
   - job: Linux
     pool:
