feat: Add strong naming as per Microsoft's new guidance
BREAKING CHANGE: Adding strong naming is a breaking change.
For more details on the changed guidance see
https://docs.microsoft.com/en-us/dotnet/standard/library-guidance/strong-naming#create-strong-named-net-libraries

--- a/src/Reference.AzurePipelines/Reference.AzurePipelines.csproj
+++ b/src/Reference.AzurePipelines/Reference.AzurePipelines.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
@@ -17,6 +17,13 @@
   </PropertyGroup>
   <!-- End Nuget -->
 
+  <!-- Strong naming: https://docs.microsoft.com/en-us/dotnet/standard/library-guidance/strong-naming -->
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>../Reference.AzurePipelines.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <!-- End Nuget -->
+
   <!-- Sourcelink: https://github.com/dotnet/sourcelink/ -->
   <PropertyGroup>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
@@ -24,7 +31,7 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
   </ItemGroup>
   <!-- End Sourcelink -->
 
