fix: The 'licenseUrl' element will be deprecated
PackageLicenseUrl is now deprecated and replaced by PackageLicenseFile
requiring the license file to be embedded the nuget package

--- a/src/Reference.AzurePipelines/Reference.AzurePipelines.csproj
+++ b/src/Reference.AzurePipelines/Reference.AzurePipelines.csproj
@@ -12,9 +12,13 @@
     </Description>
     <PackageProjectUrl>https://github.com/michael-wolfenden/Reference.AzurePipelines</PackageProjectUrl>
     <RepositoryUrl>https://github.com/michael-wolfenden/Reference.AzurePipelines</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/michael-wolfenden/Reference.AzurePipelines/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageIconUrl>https://raw.githubusercontent.com/michael-wolfenden/Reference.AzurePipelines/master/assets/logo.png</PackageIconUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="$(PackageLicenseFile)"/>
+  </ItemGroup>
   <!-- End Nuget -->
 
   <!-- Strong naming: https://docs.microsoft.com/en-us/dotnet/standard/library-guidance/strong-naming -->
