chore(build): Copy artifacts to root folder without artifact name
`DownloadPipelineArtifact@2` was replaced by `DownloadBuildArtifacts@0` however unlike `DownloadPipelineArtifact@2`, `DownloadBuildArtifacts@0` always includes the artifact name in the `downloadPath` cause the release to fail it couldn't find the artifacts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -146,6 +146,13 @@ jobs:
         buildType: 'current'
         downloadType: 'single'
         downloadPath: './'
+        
+    # Workaround https://github.com/Microsoft/vsts-tasks/issues/6739
+    - task: CopyFiles@2
+      displayName: Copy artifacts to root folder without artifact name
+      inputs:
+        sourceFolder: ./ubuntu-artifacts
+        targetFolder: ./        
 
     # Run semantic-release to trigger a release
     - bash: |
